--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 ENVIRONMENT=local
 
 # User app
-NEXT_PUBLIC_API_URL=https://api.vibecoding.ad
+NEXT_PUBLIC_API_URL=https://api.vibecoding.ad # alternatively https://api.devkit4ai.com
 
 # User app modes (operator, console, project)
 DEVKIT4AI_MODE=project
