--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^24.9.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8.5.6",
